<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.valentina.colombiaturistica.HotelesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/royalblue">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/Hotel1"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="130dp"
                android:layout_height="150dp"
                android:src="@drawable/armenia"
                android:layout_marginLeft="5dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telh1"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/celh1"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dirh1"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Correoh1"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Webh1"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="5dp"/>


            </LinearLayout>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/Hotel2"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:background="@color/white"
            android:layout_marginTop="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white">
            <ImageView
                android:layout_width="130dp"
                android:layout_height="150dp"
                android:src="@drawable/moccawa"
                android:layout_marginLeft="5dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telh2"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/celh2"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dirh2"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Correoh2"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Webh2"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="5dp"/>


            </LinearLayout>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/Hotel3"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="130dp"
                android:layout_height="150dp"
                android:src="@drawable/zuldemayda"
                android:layout_marginLeft="5dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telh3"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/celh3"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dirh3"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Correoh3"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Webh3"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="5dp"/>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>

