<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.example.valentina.colombiaturistica.BaresActivity">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/Bar1"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="130dp"
                android:layout_height="150dp"
                android:src="@drawable/cirano"
                android:layout_marginLeft="5dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/horariob1"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telb1"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/celb1"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dirb1"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="5dp"/>


            </LinearLayout>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/Bar2"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:background="@color/coral"
            android:layout_marginTop="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/coral">
            <ImageView
                android:layout_width="130dp"
                android:layout_height="150dp"
                android:src="@drawable/barmariajuana"
                android:layout_marginLeft="5dp" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/horariob2"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/celb2"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dirb2"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Webb2"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="5dp"/>


            </LinearLayout>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/Bar3"
            android:gravity="center_horizontal"
            android:textColor="@color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="130dp"
                android:layout_height="150dp"
                android:src="@drawable/thecitypub"
                android:layout_marginLeft="5dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/horariob3"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telb3"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/celb3"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dirb3"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="5dp"/>



            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</ScrollView>
