<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.example.valentina.colombiaturistica.SitiosActivity">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/royalblue">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/sitio1"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="130dp"
                android:layout_height="150dp"
                android:src="@drawable/museoquimbaya"
                android:layout_marginLeft="5dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/horarios1"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tels1"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dirs1"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="5dp"/>


            </LinearLayout>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/sitio2"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:background="@color/white"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white">
            <ImageView
                android:layout_width="130dp"
                android:layout_height="150dp"
                android:src="@drawable/parquedelavida"
                android:layout_marginLeft="5dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/horarios2"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tels2"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dirs2"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="5dp"/>
            </LinearLayout>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/sitio3"
            android:gravity="center_horizontal"
            android:textColor="@color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="130dp"
                android:layout_height="150dp"
                android:src="@drawable/lago"
                android:layout_marginLeft="5dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/horarios3"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tels3"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cels3"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dirs3"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="5dp"/>



            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</ScrollView>
