<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.valentina.colombiaturistica.InfoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Demografia"
        android:textSize="30dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:background="@color/coral"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pobla"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Cabecera"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Resto"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"/>

</LinearLayout>
